# hail-old

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  build.cmd  test.hl
compiler/: README.md
compiler/hail/: Cargo.toml
compiler/hail-diagnostic/: Cargo.toml
compiler/hail-diagnostic/src/: lib.rs
compiler/hail-opt/: Cargo.toml
compiler/hail-opt/src/: lib.rs
compiler/hail-parser/: Cargo.toml
compiler/hail-parser/src/: asi.rs  ast.rs  grammar.lalrpop  grammar.rs  lib.rs  raw_lexer.rs  token.rs
compiler/hail-parser/src/old/: asi.rs  lib.rs  raw_lexer.rs  raw_token.rs  token.rs
compiler/hail-shared/: Cargo.toml
compiler/hail-shared/src/: iter.rs  lib.rs
compiler/hail/src/: main.rs
compiler/hailc/: Cargo.toml
compiler/hailc-ast/src/: lib.rs
compiler/hailc-ctx/src/: lib.rs
compiler/hailc-diag/: Cargo.toml
compiler/hailc-diag/src/: builder.rs  codespan.rs  driver.rs  lib.rs
compiler/hailc-lexer/: Cargo.toml
compiler/hailc-lexer/src/: lib.rs  raw.rs
compiler/hailc-loc/src/: files.rs  lib.rs
compiler/hailc-parser/: Cargo.toml
compiler/hailc-parser/src/: lib.rs  stream.rs
compiler/hailc/src/: lib.rs
docs/: README.md  goals.md  installation.md
examples/: enum.hl  hello_world.hl  imports.hl  io.hl  library.hl  vec.hl  win32.hl
examples/libc/: io.hl  mod.hl
include/: hail_chars.h  hail_io.h  hail_str.h  hail_win32.h
include/hail_syn/: scanner.h
old/: Cargo.toml  README.md  ROADMAP.md  nested.hl  new_syntax.hl  test.hl
old/compiler/hailc-ast/: Cargo.toml
old/compiler/hailc-ctx/: Cargo.toml
old/compiler/hailc-diag/: Cargo.toml
old/compiler/hailc-diag/src/: builder.rs  codespan.rs  driver.rs
old/compiler/hailc-lexer/: Cargo.toml
old/compiler/hailc-lexer/src/: raw.rs
old/compiler/hailc-loc/: Cargo.toml
old/compiler/hailc-loc/src/: lib.rs
old/compiler/hailc-parser/: Cargo.toml
old/compiler/hailc-parser/src/: lib.rs
old/examples/: hello_world.hl  library.hl  vec.hl
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs  scanner.rs
src/: ast.rs  grammar.lalrpop  hail_chars.c  hail_io.c  hail_str.c  hir_lower.rs  main.c  main.rs  scanner.rs
src/hail_syn/: scanner.c
