[package]
name = "hail-parser"
version = "0.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hail-diagnostic = { path = "../hail-diagnostic", version = "0.0.0-alpha" }
hail-shared = { path = "../hail-shared", version = "0.0.0-alpha" }
unicode-xid = "0.2.3"