[package]
name = "hail-parser"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hail-diagnostic = { path = "../hail-diagnostic", version = "0.0.1-alpha" }
hail-shared = { path = "../hail-shared", version = "0.0.1-alpha" }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
snailquote =" 0.3.1"
unicode-xid = "0.2.3"