[package]
name = "hail"
version = "0.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hail-opt = { path = "../hail-opt", version = "0.0.0-alpha" }
hail-parser = { path = "../hail-parser", version = "0.0.0-alpha" }
hail-diagnostic = { path = "../hail-diagnostic", version = "0.0.0-alpha" }