[package]
name = "hailc"
version = "0.0.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hailc-ctx = { path = "../hailc-ctx", version = "0.0.0-alpha" }
hailc-diag = { path = "../hailc-diag", version = "0.0.0-alpha" }
hailc-lexer = { path = "../hailc-lexer", version = "0.0.0-alpha" }
hailc-loc = { path = "../hailc-loc", version = "0.0.0-alpha" }